--- a/project1.lpi
+++ b/project1.lpi
@@ -32,7 +32,7 @@
         <PackageName Value="LCL"/>
       </Item1>
     </RequiredPackages>
-    <Units Count="18">
+    <Units Count="19">
       <Unit0>
         <Filename Value="project1.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -47,12 +47,12 @@
         <ComponentName Value="Form1"/>
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="Unit1"/>
-        <CursorPos X="14" Y="159"/>
-        <TopLine Value="144"/>
+        <CursorPos X="15" Y="241"/>
+        <TopLine Value="217"/>
         <EditorIndex Value="0"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
-        <FoldState Value=" T4iB03112316"/>
+        <FoldState Value=" T4iG03112}"/>
       </Unit1>
       <Unit2>
         <Filename Value="domain_unit.pas"/>
@@ -60,7 +60,7 @@
         <UnitName Value="domain_unit"/>
         <CursorPos X="41" Y="21"/>
         <TopLine Value="1"/>
-        <EditorIndex Value="5"/>
+        <EditorIndex Value="6"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
       </Unit2>
@@ -69,15 +69,15 @@
         <UnitName Value="point3d_unit"/>
         <CursorPos X="1" Y="10"/>
         <TopLine Value="1"/>
-        <UsageCount Value="84"/>
+        <UsageCount Value="80"/>
       </Unit3>
       <Unit4>
         <Filename Value="region_unit.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="region_unit"/>
         <CursorPos X="1" Y="57"/>
-        <TopLine Value="40"/>
-        <EditorIndex Value="4"/>
+        <TopLine Value="24"/>
+        <EditorIndex Value="5"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
       </Unit4>
@@ -87,7 +87,7 @@
         <UnitName Value="rigidgroup_unit"/>
         <CursorPos X="35" Y="84"/>
         <TopLine Value="69"/>
-        <EditorIndex Value="7"/>
+        <EditorIndex Value="8"/>
         <UsageCount Value="201"/>
         <Loaded Value="True"/>
       </Unit5>
@@ -97,7 +97,7 @@
         <UnitName Value="atom_unit"/>
         <CursorPos X="19" Y="27"/>
         <TopLine Value="1"/>
-        <EditorIndex Value="6"/>
+        <EditorIndex Value="7"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
       </Unit6>
@@ -105,9 +105,9 @@
         <Filename Value="sinewave_unit.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="sineWave_unit"/>
-        <CursorPos X="33" Y="71"/>
+        <CursorPos X="1" Y="71"/>
         <TopLine Value="56"/>
-        <EditorIndex Value="9"/>
+        <EditorIndex Value="10"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
       </Unit7>
@@ -115,9 +115,9 @@
         <Filename Value="linkedlist_unit.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="linkedList_unit"/>
-        <CursorPos X="31" Y="93"/>
-        <TopLine Value="82"/>
-        <EditorIndex Value="3"/>
+        <CursorPos X="1" Y="148"/>
+        <TopLine Value="129"/>
+        <EditorIndex Value="4"/>
         <UsageCount Value="368"/>
         <Loaded Value="True"/>
       </Unit8>
@@ -126,14 +126,14 @@
         <UnitName Value="myinteger_unit"/>
         <CursorPos X="47" Y="1"/>
         <TopLine Value="1"/>
-        <UsageCount Value="71"/>
+        <UsageCount Value="67"/>
       </Unit9>
       <Unit10>
         <Filename Value="sinesegment_unit.pas"/>
         <UnitName Value="sineSegment_unit"/>
         <CursorPos X="1" Y="1"/>
         <TopLine Value="1"/>
-        <UsageCount Value="5"/>
+        <UsageCount Value="1"/>
       </Unit10>
       <Unit11>
         <Filename Value="pointnd_unit.pas"/>
@@ -149,36 +149,36 @@
         <UnitName Value="sinewaveinregion_unit"/>
         <CursorPos X="22" Y="45"/>
         <TopLine Value="16"/>
-        <EditorIndex Value="8"/>
+        <EditorIndex Value="9"/>
         <UsageCount Value="235"/>
         <Loaded Value="True"/>
       </Unit12>
       <Unit13>
         <Filename Value="../../../usr/lib/lazarus/0.9.28.2/lcl/include/control.inc"/>
-        <CursorPos X="1" Y="1580"/>
-        <TopLine Value="1579"/>
-        <UsageCount Value="10"/>
+        <CursorPos X="1" Y="2228"/>
+        <TopLine Value="2243"/>
+        <UsageCount Value="6"/>
       </Unit13>
       <Unit14>
         <Filename Value="../../../usr/lib/lazarus/0.9.28.2/lcl/include/buttoncontrol.inc"/>
         <CursorPos X="1" Y="27"/>
         <TopLine Value="12"/>
-        <UsageCount Value="10"/>
+        <UsageCount Value="6"/>
       </Unit14>
       <Unit15>
         <Filename Value="../../../usr/lib/lazarus/0.9.28.2/lcl/include/buttons.inc"/>
         <CursorPos X="1" Y="332"/>
         <TopLine Value="307"/>
-        <UsageCount Value="10"/>
+        <UsageCount Value="6"/>
       </Unit15>
       <Unit16>
         <Filename Value="atomsine_calc_unit.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="atomsine_calc_unit"/>
-        <CursorPos X="59" Y="121"/>
-        <TopLine Value="106"/>
+        <CursorPos X="42" Y="114"/>
+        <TopLine Value="102"/>
         <EditorIndex Value="1"/>
-        <UsageCount Value="60"/>
+        <UsageCount Value="103"/>
         <Loaded Value="True"/>
       </Unit16>
       <Unit17>
@@ -187,131 +187,141 @@
         <UnitName Value="quicksort_unit"/>
         <CursorPos X="63" Y="61"/>
         <TopLine Value="38"/>
-        <EditorIndex Value="2"/>
-        <UsageCount Value="26"/>
+        <EditorIndex Value="3"/>
+        <UsageCount Value="69"/>
         <Loaded Value="True"/>
       </Unit17>
+      <Unit18>
+        <Filename Value="mydebugger_unit.pas"/>
+        <IsPartOfProject Value="True"/>
+        <UnitName Value="mydebugger_unit"/>
+        <CursorPos X="49" Y="2"/>
+        <TopLine Value="2"/>
+        <EditorIndex Value="2"/>
+        <UsageCount Value="21"/>
+        <Loaded Value="True"/>
+      </Unit18>
     </Units>
     <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
-        <Filename Value="quicksort_unit.pas"/>
-        <Caret Line="31" Column="16" TopLine="23"/>
+        <Filename Value="atomsine_calc_unit.pas"/>
+        <Caret Line="165" Column="1" TopLine="148"/>
       </Position1>
       <Position2>
-        <Filename Value="quicksort_unit.pas"/>
-        <Caret Line="33" Column="7" TopLine="23"/>
+        <Filename Value="atomsine_calc_unit.pas"/>
+        <Caret Line="167" Column="1" TopLine="148"/>
       </Position2>
       <Position3>
-        <Filename Value="quicksort_unit.pas"/>
-        <Caret Line="38" Column="49" TopLine="23"/>
+        <Filename Value="atomsine_calc_unit.pas"/>
+        <Caret Line="168" Column="1" TopLine="148"/>
       </Position3>
       <Position4>
-        <Filename Value="quicksort_unit.pas"/>
-        <Caret Line="43" Column="27" TopLine="18"/>
+        <Filename Value="atomsine_calc_unit.pas"/>
+        <Caret Line="170" Column="1" TopLine="148"/>
       </Position4>
       <Position5>
-        <Filename Value="quicksort_unit.pas"/>
-        <Caret Line="31" Column="18" TopLine="18"/>
+        <Filename Value="atomsine_calc_unit.pas"/>
+        <Caret Line="175" Column="1" TopLine="148"/>
       </Position5>
       <Position6>
-        <Filename Value="quicksort_unit.pas"/>
-        <Caret Line="46" Column="24" TopLine="24"/>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="183" Column="1" TopLine="168"/>
       </Position6>
       <Position7>
-        <Filename Value="quicksort_unit.pas"/>
-        <Caret Line="27" Column="127" TopLine="23"/>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="200" Column="1" TopLine="185"/>
       </Position7>
       <Position8>
-        <Filename Value="quicksort_unit.pas"/>
-        <Caret Line="61" Column="36" TopLine="39"/>
+        <Filename Value="atomsine_calc_unit.pas"/>
+        <Caret Line="172" Column="81" TopLine="148"/>
       </Position8>
       <Position9>
-        <Filename Value="quicksort_unit.pas"/>
-        <Caret Line="49" Column="55" TopLine="33"/>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="191" Column="18" TopLine="120"/>
       </Position9>
       <Position10>
-        <Filename Value="quicksort_unit.pas"/>
-        <Caret Line="57" Column="32" TopLine="39"/>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="192" Column="18" TopLine="163"/>
       </Position10>
       <Position11>
-        <Filename Value="quicksort_unit.pas"/>
-        <Caret Line="55" Column="34" TopLine="39"/>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="193" Column="18" TopLine="164"/>
       </Position11>
       <Position12>
-        <Filename Value="quicksort_unit.pas"/>
-        <Caret Line="63" Column="22" TopLine="39"/>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="194" Column="18" TopLine="165"/>
       </Position12>
       <Position13>
-        <Filename Value="quicksort_unit.pas"/>
-        <Caret Line="61" Column="29" TopLine="39"/>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="161" Column="25" TopLine="150"/>
       </Position13>
       <Position14>
-        <Filename Value="atomsine_calc_unit.pas"/>
-        <Caret Line="107" Column="19" TopLine="86"/>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="164" Column="24" TopLine="157"/>
       </Position14>
       <Position15>
-        <Filename Value="atomsine_calc_unit.pas"/>
-        <Caret Line="105" Column="19" TopLine="91"/>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="163" Column="12" TopLine="148"/>
       </Position15>
       <Position16>
-        <Filename Value="atomsine_calc_unit.pas"/>
-        <Caret Line="108" Column="28" TopLine="93"/>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="185" Column="17" TopLine="158"/>
       </Position16>
       <Position17>
-        <Filename Value="atomsine_calc_unit.pas"/>
-        <Caret Line="110" Column="41" TopLine="85"/>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="184" Column="30" TopLine="166"/>
       </Position17>
       <Position18>
         <Filename Value="atomsine_calc_unit.pas"/>
-        <Caret Line="111" Column="62" TopLine="94"/>
+        <Caret Line="155" Column="16" TopLine="139"/>
       </Position18>
       <Position19>
         <Filename Value="atomsine_calc_unit.pas"/>
-        <Caret Line="110" Column="45" TopLine="96"/>
+        <Caret Line="70" Column="32" TopLine="49"/>
       </Position19>
       <Position20>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="181" Column="61" TopLine="151"/>
+        <Filename Value="mydebugger_unit.pas"/>
+        <Caret Line="26" Column="24" TopLine="1"/>
       </Position20>
       <Position21>
-        <Filename Value="atomsine_calc_unit.pas"/>
-        <Caret Line="116" Column="13" TopLine="95"/>
+        <Filename Value="mydebugger_unit.pas"/>
+        <Caret Line="13" Column="40" TopLine="1"/>
       </Position21>
       <Position22>
-        <Filename Value="atomsine_calc_unit.pas"/>
-        <Caret Line="99" Column="56" TopLine="99"/>
+        <Filename Value="mydebugger_unit.pas"/>
+        <Caret Line="15" Column="4" TopLine="1"/>
       </Position22>
       <Position23>
-        <Filename Value="atomsine_calc_unit.pas"/>
-        <Caret Line="112" Column="9" TopLine="97"/>
+        <Filename Value="mydebugger_unit.pas"/>
+        <Caret Line="13" Column="16" TopLine="2"/>
       </Position23>
       <Position24>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="159" Column="14" TopLine="144"/>
+        <Filename Value="mydebugger_unit.pas"/>
+        <Caret Line="21" Column="34" TopLine="2"/>
       </Position24>
       <Position25>
-        <Filename Value="atomsine_calc_unit.pas"/>
-        <Caret Line="122" Column="13" TopLine="98"/>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="228" Column="42" TopLine="218"/>
       </Position25>
       <Position26>
         <Filename Value="atomsine_calc_unit.pas"/>
-        <Caret Line="115" Column="92" TopLine="101"/>
+        <Caret Line="114" Column="12" TopLine="99"/>
       </Position26>
       <Position27>
         <Filename Value="atomsine_calc_unit.pas"/>
-        <Caret Line="128" Column="17" TopLine="103"/>
+        <Caret Line="110" Column="67" TopLine="102"/>
       </Position27>
       <Position28>
-        <Filename Value="atomsine_calc_unit.pas"/>
-        <Caret Line="118" Column="42" TopLine="14"/>
+        <Filename Value="mydebugger_unit.pas"/>
+        <Caret Line="37" Column="9" TopLine="8"/>
       </Position28>
       <Position29>
-        <Filename Value="atomsine_calc_unit.pas"/>
-        <Caret Line="125" Column="134" TopLine="98"/>
+        <Filename Value="mydebugger_unit.pas"/>
+        <Caret Line="34" Column="30" TopLine="12"/>
       </Position29>
       <Position30>
-        <Filename Value="atomsine_calc_unit.pas"/>
-        <Caret Line="121" Column="16" TopLine="106"/>
+        <Filename Value="mydebugger_unit.pas"/>
+        <Caret Line="36" Column="14" TopLine="12"/>
       </Position30>
     </JumpHistory>
   </ProjectOptions>
@@ -332,7 +342,7 @@
     <BreakPoints Count="1">
       <Item1>
         <Source Value="atomsine_calc_unit.pas"/>
-        <Line Value="159"/>
+        <Line Value="193"/>
       </Item1>
     </BreakPoints>
     <Exceptions Count="2">
